# lovepotion-experiments

./: .gitignore  CMakeLists.txt  README.md  test_win.ps1
debug/src/: main.rs
include/: console.hpp
include/common/: Color.hpp  Console.hpp  Data.hpp  StrongRef.hpp  b64.hpp  error.hpp  luax.hpp  math.hpp  version.hpp
include/modules/data/: ByteData.hpp  CompressedData.hpp  Compressor.hpp  DataModule.hpp  wrap_Data.hpp  wrap_DataModule.hpp
include/modules/data/misc/: MD5.hpp  SHA512.hpp  ZlibCompressor.hpp
include/modules/filesystem/: File.tcc  FileData.hpp  Filesystem.tcc  wrap_File.hpp  wrap_Filesystem.hpp
include/modules/filesystem/physfs/: File.hpp  Filesystem.hpp
include/modules/love/: love.hpp
include/utility/: logfile.hpp  map.hpp
libraries/physfs/: physfs.c  physfs.h
libraries/utf8/utf8/: checked.h  core.h  unchecked.h
platform/ctr/: CMakeLists.txt
platform/ctr/include/: boot.hpp
platform/ctr/source/: boot.cpp
source/: main.cpp
source/common/: Stream.cpp  b64.cpp  luax.cpp
source/modules/data/: ByteData.cpp  CompressedData.cpp  Compressor.cpp  DataModule.cpp  DataView.cpp  wrap_ByteData.cpp  wrap_Data.cpp  wrap_DataModule.cpp
source/modules/event/: wrap_Event.cpp
source/modules/filesystem/: FileData.cpp  wrap_File.cpp  wrap_Filesystem.cpp
source/modules/filesystem/physfs/: File.cpp  Filesystem.cpp
source/modules/love/: love.cpp
source/modules/love/scripts/: arg.lua  boot.lua  callbacks.lua  logfile.lua
source/modules/timer/: wrap_Timer.cpp
